--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_map_gl
 description: "Flutter paketi ile mobil uygulamalarda (iOS ve Android) haritaları kullanmanıza olanak tanıyan bir paket."
-version: 0.0.9
+version: 0.1.0
 homepage: https://github.com/muhammedfurkansahin/flutter_map_gl
 repository: https://github.com/muhammedfurkansahin/flutter_map_gl
 issue_tracker: https://github.com/muhammedfurkansahin/flutter_map_gl/issues
@@ -13,14 +13,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^6.1.5
-  geolocator: ^10.0.2
-  permission_handler: ^11.0.0
+  webview_flutter: ^4.11.0 # WebView tabanlı harita oluşturmak için
+  webview_flutter_android: ^4.4.2
+  webview_flutter_wkwebview: ^3.20.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  # webview_flutter: ^4.11.0 # Sadece dev_dependencies altında geliştirme için
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
